--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,6 @@ test:
 production:
   <<: *default
   database: furima_28117_production
-  username: furima_28117
-  password: <%= ENV['FURIMA_28117_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['furima28117'] %>
+  socket: /var/lib/mysql/mysql.sock
